// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox renders correctly 1`] = `
<DocumentFragment>
  .cache-3lt5x-CheckboxContainer {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.cache-3lt5x-CheckboxContainer[aria-disabled='false'] {
  cursor: pointer;
}

.cache-3lt5x-CheckboxContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-3lt5x-CheckboxContainer[aria-disabled='true'] .eu28k4m3 {
  fill: #c4c9d6;
}

.cache-3lt5x-CheckboxContainer[aria-disabled='true'] .eu28k4m3 .eu28k4m7 {
  stroke: #c4c9d6;
  fill: #f6f6f8;
}

.cache-3lt5x-CheckboxContainer .eu28k4m6,
.cache-3lt5x-CheckboxContainer .eu28k4m5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-3lt5x-CheckboxContainer .eu28k4m2:checked+.eu28k4m3 .eu28k4m6 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-3lt5x-CheckboxContainer .eu28k4m2[aria-checked="mixed"]+.eu28k4m3 .eu28k4m5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-3lt5x-CheckboxContainer:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-3lt5x-CheckboxContainer:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 .eu28k4m7 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-3lt5x-CheckboxContainer:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-3lt5x-CheckboxContainer:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 .eu28k4m7 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-mhe016-CheckboxInput {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-mhe016-CheckboxInput:not(:disabled) {
  cursor: pointer;
}

.cache-mhe016-CheckboxInput:disabled {
  cursor: not-allowed;
}

.cache-mhe016-CheckboxInput:checked+.eu28k4m3,
.cache-mhe016-CheckboxInput[aria-checked='mixed']+.eu28k4m3 {
  fill: #4f0599;
}

.cache-mhe016-CheckboxInput:checked+.eu28k4m3 .eu28k4m7,
.cache-mhe016-CheckboxInput[aria-checked='mixed']+.eu28k4m3 .eu28k4m7 {
  stroke: #4f0599;
}

.cache-mhe016-CheckboxInput[aria-invalid='true']+.eu28k4m3,
.cache-mhe016-CheckboxInput[aria-invalid='mixed']+.eu28k4m3 {
  fill: #dd3252;
}

.cache-mhe016-CheckboxInput[aria-invalid='true']+.eu28k4m3 .eu28k4m7,
.cache-mhe016-CheckboxInput[aria-invalid='mixed']+.eu28k4m3 .eu28k4m7 {
  stroke: #dd3252;
}

.cache-mhe016-CheckboxInput:focus+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-mhe016-CheckboxInput:focus+.eu28k4m3 .eu28k4m7 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-mhe016-CheckboxInput[aria-invalid='true']:focus+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-mhe016-CheckboxInput[aria-invalid='true']:focus+.eu28k4m3 .eu28k4m7 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-1lcemq7-StyledIcon {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-uzcbt1-InnerCheckbox {
  fill: #ffffff;
  stroke: #b2b6c3;
}

<label
    aria-disabled="false"
    class="cache-3lt5x-CheckboxContainer eu28k4m1"
    data-checked="false"
    data-error="false"
  >
    <input
      aria-invalid="false"
      class="cache-mhe016-CheckboxInput eu28k4m2"
      name="testing"
      type="checkbox"
      value=""
    />
    <svg
      class="cache-1lcemq7-StyledIcon eu28k4m3"
      size="24"
      viewBox="0 0 24 24"
    >
      <g>
        <rect
          class="cache-uzcbt1-InnerCheckbox eu28k4m7"
          height="14"
          rx="1"
          stroke-width="2"
          width="14"
          x="5"
          y="5"
        />
        <rect
          class="cache-1nkq693-CheckMixedMark eu28k4m5"
          height="2"
          rx="1"
          width="8"
          x="8"
          y="11"
        />
        <rect
          class="cache-1nu9t2r-CheckMark eu28k4m6"
          height="8"
          rx="1"
          width="8"
          x="8"
          y="8"
        />
      </g>
    </svg>
    Checkbox Label
  </label>
</DocumentFragment>
`;

exports[`Checkbox renders correctly checked 1`] = `
<DocumentFragment>
  .cache-3lt5x-CheckboxContainer {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.cache-3lt5x-CheckboxContainer[aria-disabled='false'] {
  cursor: pointer;
}

.cache-3lt5x-CheckboxContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-3lt5x-CheckboxContainer[aria-disabled='true'] .eu28k4m3 {
  fill: #c4c9d6;
}

.cache-3lt5x-CheckboxContainer[aria-disabled='true'] .eu28k4m3 .eu28k4m7 {
  stroke: #c4c9d6;
  fill: #f6f6f8;
}

.cache-3lt5x-CheckboxContainer .eu28k4m6,
.cache-3lt5x-CheckboxContainer .eu28k4m5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-3lt5x-CheckboxContainer .eu28k4m2:checked+.eu28k4m3 .eu28k4m6 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-3lt5x-CheckboxContainer .eu28k4m2[aria-checked="mixed"]+.eu28k4m3 .eu28k4m5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-3lt5x-CheckboxContainer:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-3lt5x-CheckboxContainer:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 .eu28k4m7 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-3lt5x-CheckboxContainer:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-3lt5x-CheckboxContainer:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 .eu28k4m7 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-mhe016-CheckboxInput {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-mhe016-CheckboxInput:not(:disabled) {
  cursor: pointer;
}

.cache-mhe016-CheckboxInput:disabled {
  cursor: not-allowed;
}

.cache-mhe016-CheckboxInput:checked+.eu28k4m3,
.cache-mhe016-CheckboxInput[aria-checked='mixed']+.eu28k4m3 {
  fill: #4f0599;
}

.cache-mhe016-CheckboxInput:checked+.eu28k4m3 .eu28k4m7,
.cache-mhe016-CheckboxInput[aria-checked='mixed']+.eu28k4m3 .eu28k4m7 {
  stroke: #4f0599;
}

.cache-mhe016-CheckboxInput[aria-invalid='true']+.eu28k4m3,
.cache-mhe016-CheckboxInput[aria-invalid='mixed']+.eu28k4m3 {
  fill: #dd3252;
}

.cache-mhe016-CheckboxInput[aria-invalid='true']+.eu28k4m3 .eu28k4m7,
.cache-mhe016-CheckboxInput[aria-invalid='mixed']+.eu28k4m3 .eu28k4m7 {
  stroke: #dd3252;
}

.cache-mhe016-CheckboxInput:focus+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-mhe016-CheckboxInput:focus+.eu28k4m3 .eu28k4m7 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-mhe016-CheckboxInput[aria-invalid='true']:focus+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-mhe016-CheckboxInput[aria-invalid='true']:focus+.eu28k4m3 .eu28k4m7 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-1lcemq7-StyledIcon {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-uzcbt1-InnerCheckbox {
  fill: #ffffff;
  stroke: #b2b6c3;
}

<label
    aria-disabled="false"
    class="cache-3lt5x-CheckboxContainer eu28k4m1"
    data-checked="true"
    data-error="false"
  >
    <input
      aria-invalid="false"
      checked=""
      class="cache-mhe016-CheckboxInput eu28k4m2"
      name=":r3:"
      type="checkbox"
      value=""
    />
    <svg
      class="cache-1lcemq7-StyledIcon eu28k4m3"
      size="24"
      viewBox="0 0 24 24"
    >
      <g>
        <rect
          class="cache-uzcbt1-InnerCheckbox eu28k4m7"
          height="14"
          rx="1"
          stroke-width="2"
          width="14"
          x="5"
          y="5"
        />
        <rect
          class="cache-1nkq693-CheckMixedMark eu28k4m5"
          height="2"
          rx="1"
          width="8"
          x="8"
          y="11"
        />
        <rect
          class="cache-1nu9t2r-CheckMark eu28k4m6"
          height="8"
          rx="1"
          width="8"
          x="8"
          y="8"
        />
      </g>
    </svg>
    Checkbox Label
  </label>
</DocumentFragment>
`;

exports[`Checkbox renders correctly checked and disabled 1`] = `
<DocumentFragment>
  .cache-3lt5x-CheckboxContainer {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.cache-3lt5x-CheckboxContainer[aria-disabled='false'] {
  cursor: pointer;
}

.cache-3lt5x-CheckboxContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-3lt5x-CheckboxContainer[aria-disabled='true'] .eu28k4m3 {
  fill: #c4c9d6;
}

.cache-3lt5x-CheckboxContainer[aria-disabled='true'] .eu28k4m3 .eu28k4m7 {
  stroke: #c4c9d6;
  fill: #f6f6f8;
}

.cache-3lt5x-CheckboxContainer .eu28k4m6,
.cache-3lt5x-CheckboxContainer .eu28k4m5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-3lt5x-CheckboxContainer .eu28k4m2:checked+.eu28k4m3 .eu28k4m6 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-3lt5x-CheckboxContainer .eu28k4m2[aria-checked="mixed"]+.eu28k4m3 .eu28k4m5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-3lt5x-CheckboxContainer:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-3lt5x-CheckboxContainer:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 .eu28k4m7 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-3lt5x-CheckboxContainer:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-3lt5x-CheckboxContainer:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 .eu28k4m7 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-mhe016-CheckboxInput {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-mhe016-CheckboxInput:not(:disabled) {
  cursor: pointer;
}

.cache-mhe016-CheckboxInput:disabled {
  cursor: not-allowed;
}

.cache-mhe016-CheckboxInput:checked+.eu28k4m3,
.cache-mhe016-CheckboxInput[aria-checked='mixed']+.eu28k4m3 {
  fill: #4f0599;
}

.cache-mhe016-CheckboxInput:checked+.eu28k4m3 .eu28k4m7,
.cache-mhe016-CheckboxInput[aria-checked='mixed']+.eu28k4m3 .eu28k4m7 {
  stroke: #4f0599;
}

.cache-mhe016-CheckboxInput[aria-invalid='true']+.eu28k4m3,
.cache-mhe016-CheckboxInput[aria-invalid='mixed']+.eu28k4m3 {
  fill: #dd3252;
}

.cache-mhe016-CheckboxInput[aria-invalid='true']+.eu28k4m3 .eu28k4m7,
.cache-mhe016-CheckboxInput[aria-invalid='mixed']+.eu28k4m3 .eu28k4m7 {
  stroke: #dd3252;
}

.cache-mhe016-CheckboxInput:focus+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-mhe016-CheckboxInput:focus+.eu28k4m3 .eu28k4m7 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-mhe016-CheckboxInput[aria-invalid='true']:focus+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-mhe016-CheckboxInput[aria-invalid='true']:focus+.eu28k4m3 .eu28k4m7 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-1lcemq7-StyledIcon {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-uzcbt1-InnerCheckbox {
  fill: #ffffff;
  stroke: #b2b6c3;
}

<label
    aria-disabled="true"
    class="cache-3lt5x-CheckboxContainer eu28k4m1"
    data-checked="true"
    data-error="false"
  >
    <input
      aria-invalid="false"
      checked=""
      class="cache-mhe016-CheckboxInput eu28k4m2"
      disabled=""
      name=":r5:"
      type="checkbox"
      value=""
    />
    <svg
      class="cache-1lcemq7-StyledIcon eu28k4m3"
      size="24"
      viewBox="0 0 24 24"
    >
      <g>
        <rect
          class="cache-uzcbt1-InnerCheckbox eu28k4m7"
          height="14"
          rx="1"
          stroke-width="2"
          width="14"
          x="5"
          y="5"
        />
        <rect
          class="cache-1nkq693-CheckMixedMark eu28k4m5"
          height="2"
          rx="1"
          width="8"
          x="8"
          y="11"
        />
        <rect
          class="cache-1nu9t2r-CheckMark eu28k4m6"
          height="8"
          rx="1"
          width="8"
          x="8"
          y="8"
        />
      </g>
    </svg>
    Checkbox Label
  </label>
</DocumentFragment>
`;

exports[`Checkbox renders correctly disabled 1`] = `
<DocumentFragment>
  .cache-3lt5x-CheckboxContainer {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.cache-3lt5x-CheckboxContainer[aria-disabled='false'] {
  cursor: pointer;
}

.cache-3lt5x-CheckboxContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-3lt5x-CheckboxContainer[aria-disabled='true'] .eu28k4m3 {
  fill: #c4c9d6;
}

.cache-3lt5x-CheckboxContainer[aria-disabled='true'] .eu28k4m3 .eu28k4m7 {
  stroke: #c4c9d6;
  fill: #f6f6f8;
}

.cache-3lt5x-CheckboxContainer .eu28k4m6,
.cache-3lt5x-CheckboxContainer .eu28k4m5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-3lt5x-CheckboxContainer .eu28k4m2:checked+.eu28k4m3 .eu28k4m6 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-3lt5x-CheckboxContainer .eu28k4m2[aria-checked="mixed"]+.eu28k4m3 .eu28k4m5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-3lt5x-CheckboxContainer:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-3lt5x-CheckboxContainer:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 .eu28k4m7 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-3lt5x-CheckboxContainer:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-3lt5x-CheckboxContainer:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 .eu28k4m7 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-mhe016-CheckboxInput {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-mhe016-CheckboxInput:not(:disabled) {
  cursor: pointer;
}

.cache-mhe016-CheckboxInput:disabled {
  cursor: not-allowed;
}

.cache-mhe016-CheckboxInput:checked+.eu28k4m3,
.cache-mhe016-CheckboxInput[aria-checked='mixed']+.eu28k4m3 {
  fill: #4f0599;
}

.cache-mhe016-CheckboxInput:checked+.eu28k4m3 .eu28k4m7,
.cache-mhe016-CheckboxInput[aria-checked='mixed']+.eu28k4m3 .eu28k4m7 {
  stroke: #4f0599;
}

.cache-mhe016-CheckboxInput[aria-invalid='true']+.eu28k4m3,
.cache-mhe016-CheckboxInput[aria-invalid='mixed']+.eu28k4m3 {
  fill: #dd3252;
}

.cache-mhe016-CheckboxInput[aria-invalid='true']+.eu28k4m3 .eu28k4m7,
.cache-mhe016-CheckboxInput[aria-invalid='mixed']+.eu28k4m3 .eu28k4m7 {
  stroke: #dd3252;
}

.cache-mhe016-CheckboxInput:focus+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-mhe016-CheckboxInput:focus+.eu28k4m3 .eu28k4m7 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-mhe016-CheckboxInput[aria-invalid='true']:focus+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-mhe016-CheckboxInput[aria-invalid='true']:focus+.eu28k4m3 .eu28k4m7 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-1lcemq7-StyledIcon {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-uzcbt1-InnerCheckbox {
  fill: #ffffff;
  stroke: #b2b6c3;
}

<label
    aria-disabled="true"
    class="cache-3lt5x-CheckboxContainer eu28k4m1"
    data-checked="false"
    data-error="false"
  >
    <input
      aria-invalid="false"
      class="cache-mhe016-CheckboxInput eu28k4m2"
      disabled=""
      name=":r2:"
      type="checkbox"
      value=""
    />
    <svg
      class="cache-1lcemq7-StyledIcon eu28k4m3"
      size="24"
      viewBox="0 0 24 24"
    >
      <g>
        <rect
          class="cache-uzcbt1-InnerCheckbox eu28k4m7"
          height="14"
          rx="1"
          stroke-width="2"
          width="14"
          x="5"
          y="5"
        />
        <rect
          class="cache-1nkq693-CheckMixedMark eu28k4m5"
          height="2"
          rx="1"
          width="8"
          x="8"
          y="11"
        />
        <rect
          class="cache-1nu9t2r-CheckMark eu28k4m6"
          height="8"
          rx="1"
          width="8"
          x="8"
          y="8"
        />
      </g>
    </svg>
    Checkbox Label
  </label>
</DocumentFragment>
`;

exports[`Checkbox renders correctly indeterminate 1`] = `
<DocumentFragment>
  .cache-3lt5x-CheckboxContainer {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.cache-3lt5x-CheckboxContainer[aria-disabled='false'] {
  cursor: pointer;
}

.cache-3lt5x-CheckboxContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-3lt5x-CheckboxContainer[aria-disabled='true'] .eu28k4m3 {
  fill: #c4c9d6;
}

.cache-3lt5x-CheckboxContainer[aria-disabled='true'] .eu28k4m3 .eu28k4m7 {
  stroke: #c4c9d6;
  fill: #f6f6f8;
}

.cache-3lt5x-CheckboxContainer .eu28k4m6,
.cache-3lt5x-CheckboxContainer .eu28k4m5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-3lt5x-CheckboxContainer .eu28k4m2:checked+.eu28k4m3 .eu28k4m6 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-3lt5x-CheckboxContainer .eu28k4m2[aria-checked="mixed"]+.eu28k4m3 .eu28k4m5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-3lt5x-CheckboxContainer:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-3lt5x-CheckboxContainer:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 .eu28k4m7 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-3lt5x-CheckboxContainer:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-3lt5x-CheckboxContainer:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 .eu28k4m7 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-mhe016-CheckboxInput {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-mhe016-CheckboxInput:not(:disabled) {
  cursor: pointer;
}

.cache-mhe016-CheckboxInput:disabled {
  cursor: not-allowed;
}

.cache-mhe016-CheckboxInput:checked+.eu28k4m3,
.cache-mhe016-CheckboxInput[aria-checked='mixed']+.eu28k4m3 {
  fill: #4f0599;
}

.cache-mhe016-CheckboxInput:checked+.eu28k4m3 .eu28k4m7,
.cache-mhe016-CheckboxInput[aria-checked='mixed']+.eu28k4m3 .eu28k4m7 {
  stroke: #4f0599;
}

.cache-mhe016-CheckboxInput[aria-invalid='true']+.eu28k4m3,
.cache-mhe016-CheckboxInput[aria-invalid='mixed']+.eu28k4m3 {
  fill: #dd3252;
}

.cache-mhe016-CheckboxInput[aria-invalid='true']+.eu28k4m3 .eu28k4m7,
.cache-mhe016-CheckboxInput[aria-invalid='mixed']+.eu28k4m3 .eu28k4m7 {
  stroke: #dd3252;
}

.cache-mhe016-CheckboxInput:focus+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-mhe016-CheckboxInput:focus+.eu28k4m3 .eu28k4m7 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-mhe016-CheckboxInput[aria-invalid='true']:focus+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-mhe016-CheckboxInput[aria-invalid='true']:focus+.eu28k4m3 .eu28k4m7 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-1lcemq7-StyledIcon {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-uzcbt1-InnerCheckbox {
  fill: #ffffff;
  stroke: #b2b6c3;
}

<label
    aria-disabled="false"
    class="cache-3lt5x-CheckboxContainer eu28k4m1"
    data-checked="indeterminate"
    data-error="false"
  >
    <input
      aria-checked="mixed"
      aria-invalid="false"
      class="cache-mhe016-CheckboxInput eu28k4m2"
      name=":r4:"
      type="checkbox"
      value=""
    />
    <svg
      class="cache-1lcemq7-StyledIcon eu28k4m3"
      size="24"
      viewBox="0 0 24 24"
    >
      <g>
        <rect
          class="cache-uzcbt1-InnerCheckbox eu28k4m7"
          height="14"
          rx="1"
          stroke-width="2"
          width="14"
          x="5"
          y="5"
        />
        <rect
          class="cache-1nkq693-CheckMixedMark eu28k4m5"
          height="2"
          rx="1"
          width="8"
          x="8"
          y="11"
        />
        <rect
          class="cache-1nu9t2r-CheckMark eu28k4m6"
          height="8"
          rx="1"
          width="8"
          x="8"
          y="8"
        />
      </g>
    </svg>
    Checkbox Label
  </label>
</DocumentFragment>
`;

exports[`Checkbox renders correctly indeterminate and disabled 1`] = `
<DocumentFragment>
  .cache-3lt5x-CheckboxContainer {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.cache-3lt5x-CheckboxContainer[aria-disabled='false'] {
  cursor: pointer;
}

.cache-3lt5x-CheckboxContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-3lt5x-CheckboxContainer[aria-disabled='true'] .eu28k4m3 {
  fill: #c4c9d6;
}

.cache-3lt5x-CheckboxContainer[aria-disabled='true'] .eu28k4m3 .eu28k4m7 {
  stroke: #c4c9d6;
  fill: #f6f6f8;
}

.cache-3lt5x-CheckboxContainer .eu28k4m6,
.cache-3lt5x-CheckboxContainer .eu28k4m5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-3lt5x-CheckboxContainer .eu28k4m2:checked+.eu28k4m3 .eu28k4m6 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-3lt5x-CheckboxContainer .eu28k4m2[aria-checked="mixed"]+.eu28k4m3 .eu28k4m5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-3lt5x-CheckboxContainer:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-3lt5x-CheckboxContainer:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 .eu28k4m7 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-3lt5x-CheckboxContainer:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-3lt5x-CheckboxContainer:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 .eu28k4m7 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-mhe016-CheckboxInput {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-mhe016-CheckboxInput:not(:disabled) {
  cursor: pointer;
}

.cache-mhe016-CheckboxInput:disabled {
  cursor: not-allowed;
}

.cache-mhe016-CheckboxInput:checked+.eu28k4m3,
.cache-mhe016-CheckboxInput[aria-checked='mixed']+.eu28k4m3 {
  fill: #4f0599;
}

.cache-mhe016-CheckboxInput:checked+.eu28k4m3 .eu28k4m7,
.cache-mhe016-CheckboxInput[aria-checked='mixed']+.eu28k4m3 .eu28k4m7 {
  stroke: #4f0599;
}

.cache-mhe016-CheckboxInput[aria-invalid='true']+.eu28k4m3,
.cache-mhe016-CheckboxInput[aria-invalid='mixed']+.eu28k4m3 {
  fill: #dd3252;
}

.cache-mhe016-CheckboxInput[aria-invalid='true']+.eu28k4m3 .eu28k4m7,
.cache-mhe016-CheckboxInput[aria-invalid='mixed']+.eu28k4m3 .eu28k4m7 {
  stroke: #dd3252;
}

.cache-mhe016-CheckboxInput:focus+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-mhe016-CheckboxInput:focus+.eu28k4m3 .eu28k4m7 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-mhe016-CheckboxInput[aria-invalid='true']:focus+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-mhe016-CheckboxInput[aria-invalid='true']:focus+.eu28k4m3 .eu28k4m7 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-1lcemq7-StyledIcon {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-uzcbt1-InnerCheckbox {
  fill: #ffffff;
  stroke: #b2b6c3;
}

<label
    aria-disabled="true"
    class="cache-3lt5x-CheckboxContainer eu28k4m1"
    data-checked="indeterminate"
    data-error="false"
  >
    <input
      aria-checked="mixed"
      aria-invalid="false"
      class="cache-mhe016-CheckboxInput eu28k4m2"
      disabled=""
      name=":r6:"
      type="checkbox"
      value=""
    />
    <svg
      class="cache-1lcemq7-StyledIcon eu28k4m3"
      size="24"
      viewBox="0 0 24 24"
    >
      <g>
        <rect
          class="cache-uzcbt1-InnerCheckbox eu28k4m7"
          height="14"
          rx="1"
          stroke-width="2"
          width="14"
          x="5"
          y="5"
        />
        <rect
          class="cache-1nkq693-CheckMixedMark eu28k4m5"
          height="2"
          rx="1"
          width="8"
          x="8"
          y="11"
        />
        <rect
          class="cache-1nu9t2r-CheckMark eu28k4m6"
          height="8"
          rx="1"
          width="8"
          x="8"
          y="8"
        />
      </g>
    </svg>
    Checkbox Label
  </label>
</DocumentFragment>
`;

exports[`Checkbox renders correctly invisible 1`] = `
<DocumentFragment>
  .cache-3lt5x-CheckboxContainer {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.cache-3lt5x-CheckboxContainer[aria-disabled='false'] {
  cursor: pointer;
}

.cache-3lt5x-CheckboxContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-3lt5x-CheckboxContainer[aria-disabled='true'] .eu28k4m3 {
  fill: #c4c9d6;
}

.cache-3lt5x-CheckboxContainer[aria-disabled='true'] .eu28k4m3 .eu28k4m7 {
  stroke: #c4c9d6;
  fill: #f6f6f8;
}

.cache-3lt5x-CheckboxContainer .eu28k4m6,
.cache-3lt5x-CheckboxContainer .eu28k4m5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-3lt5x-CheckboxContainer .eu28k4m2:checked+.eu28k4m3 .eu28k4m6 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-3lt5x-CheckboxContainer .eu28k4m2[aria-checked="mixed"]+.eu28k4m3 .eu28k4m5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-3lt5x-CheckboxContainer:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-3lt5x-CheckboxContainer:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 .eu28k4m7 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-3lt5x-CheckboxContainer:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-3lt5x-CheckboxContainer:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 .eu28k4m7 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-mhe016-CheckboxInput {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-mhe016-CheckboxInput:not(:disabled) {
  cursor: pointer;
}

.cache-mhe016-CheckboxInput:disabled {
  cursor: not-allowed;
}

.cache-mhe016-CheckboxInput:checked+.eu28k4m3,
.cache-mhe016-CheckboxInput[aria-checked='mixed']+.eu28k4m3 {
  fill: #4f0599;
}

.cache-mhe016-CheckboxInput:checked+.eu28k4m3 .eu28k4m7,
.cache-mhe016-CheckboxInput[aria-checked='mixed']+.eu28k4m3 .eu28k4m7 {
  stroke: #4f0599;
}

.cache-mhe016-CheckboxInput[aria-invalid='true']+.eu28k4m3,
.cache-mhe016-CheckboxInput[aria-invalid='mixed']+.eu28k4m3 {
  fill: #dd3252;
}

.cache-mhe016-CheckboxInput[aria-invalid='true']+.eu28k4m3 .eu28k4m7,
.cache-mhe016-CheckboxInput[aria-invalid='mixed']+.eu28k4m3 .eu28k4m7 {
  stroke: #dd3252;
}

.cache-mhe016-CheckboxInput:focus+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-mhe016-CheckboxInput:focus+.eu28k4m3 .eu28k4m7 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-mhe016-CheckboxInput[aria-invalid='true']:focus+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-mhe016-CheckboxInput[aria-invalid='true']:focus+.eu28k4m3 .eu28k4m7 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-1lcemq7-StyledIcon {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-uzcbt1-InnerCheckbox {
  fill: #ffffff;
  stroke: #b2b6c3;
}

<label
    aria-disabled="false"
    class="cache-3lt5x-CheckboxContainer eu28k4m1"
    data-checked="false"
    data-error="false"
    data-visibility="true"
  >
    <input
      aria-invalid="false"
      class="cache-mhe016-CheckboxInput eu28k4m2"
      name=":r7:"
      type="checkbox"
      value=""
    />
    <svg
      class="cache-1lcemq7-StyledIcon eu28k4m3"
      size="24"
      viewBox="0 0 24 24"
    >
      <g>
        <rect
          class="cache-uzcbt1-InnerCheckbox eu28k4m7"
          height="14"
          rx="1"
          stroke-width="2"
          width="14"
          x="5"
          y="5"
        />
        <rect
          class="cache-1nkq693-CheckMixedMark eu28k4m5"
          height="2"
          rx="1"
          width="8"
          x="8"
          y="11"
        />
        <rect
          class="cache-1nu9t2r-CheckMark eu28k4m6"
          height="8"
          rx="1"
          width="8"
          x="8"
          y="8"
        />
      </g>
    </svg>
    Checkbox Label
  </label>
</DocumentFragment>
`;

exports[`Checkbox renders correctly no child 1`] = `
<DocumentFragment>
  .cache-3lt5x-CheckboxContainer {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.cache-3lt5x-CheckboxContainer[aria-disabled='false'] {
  cursor: pointer;
}

.cache-3lt5x-CheckboxContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-3lt5x-CheckboxContainer[aria-disabled='true'] .eu28k4m3 {
  fill: #c4c9d6;
}

.cache-3lt5x-CheckboxContainer[aria-disabled='true'] .eu28k4m3 .eu28k4m7 {
  stroke: #c4c9d6;
  fill: #f6f6f8;
}

.cache-3lt5x-CheckboxContainer .eu28k4m6,
.cache-3lt5x-CheckboxContainer .eu28k4m5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-3lt5x-CheckboxContainer .eu28k4m2:checked+.eu28k4m3 .eu28k4m6 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-3lt5x-CheckboxContainer .eu28k4m2[aria-checked="mixed"]+.eu28k4m3 .eu28k4m5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-3lt5x-CheckboxContainer:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-3lt5x-CheckboxContainer:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 .eu28k4m7 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-3lt5x-CheckboxContainer:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-3lt5x-CheckboxContainer:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 .eu28k4m7 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-mhe016-CheckboxInput {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-mhe016-CheckboxInput:not(:disabled) {
  cursor: pointer;
}

.cache-mhe016-CheckboxInput:disabled {
  cursor: not-allowed;
}

.cache-mhe016-CheckboxInput:checked+.eu28k4m3,
.cache-mhe016-CheckboxInput[aria-checked='mixed']+.eu28k4m3 {
  fill: #4f0599;
}

.cache-mhe016-CheckboxInput:checked+.eu28k4m3 .eu28k4m7,
.cache-mhe016-CheckboxInput[aria-checked='mixed']+.eu28k4m3 .eu28k4m7 {
  stroke: #4f0599;
}

.cache-mhe016-CheckboxInput[aria-invalid='true']+.eu28k4m3,
.cache-mhe016-CheckboxInput[aria-invalid='mixed']+.eu28k4m3 {
  fill: #dd3252;
}

.cache-mhe016-CheckboxInput[aria-invalid='true']+.eu28k4m3 .eu28k4m7,
.cache-mhe016-CheckboxInput[aria-invalid='mixed']+.eu28k4m3 .eu28k4m7 {
  stroke: #dd3252;
}

.cache-mhe016-CheckboxInput:focus+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-mhe016-CheckboxInput:focus+.eu28k4m3 .eu28k4m7 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-mhe016-CheckboxInput[aria-invalid='true']:focus+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-mhe016-CheckboxInput[aria-invalid='true']:focus+.eu28k4m3 .eu28k4m7 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-1lcemq7-StyledIcon {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-uzcbt1-InnerCheckbox {
  fill: #ffffff;
  stroke: #b2b6c3;
}

<label
    aria-disabled="false"
    class="cache-3lt5x-CheckboxContainer eu28k4m1"
    data-checked="false"
    data-error="false"
  >
    <input
      aria-invalid="false"
      class="cache-mhe016-CheckboxInput eu28k4m2"
      name=":r1:"
      type="checkbox"
      value=""
    />
    <svg
      class="cache-1lcemq7-StyledIcon eu28k4m3"
      size="24"
      viewBox="0 0 24 24"
    >
      <g>
        <rect
          class="cache-uzcbt1-InnerCheckbox eu28k4m7"
          height="14"
          rx="1"
          stroke-width="2"
          width="14"
          x="5"
          y="5"
        />
        <rect
          class="cache-1nkq693-CheckMixedMark eu28k4m5"
          height="2"
          rx="1"
          width="8"
          x="8"
          y="11"
        />
        <rect
          class="cache-1nu9t2r-CheckMark eu28k4m6"
          height="8"
          rx="1"
          width="8"
          x="8"
          y="8"
        />
      </g>
    </svg>
  </label>
</DocumentFragment>
`;

exports[`Checkbox renders correctly with a value 1`] = `
<DocumentFragment>
  .cache-3lt5x-CheckboxContainer {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.cache-3lt5x-CheckboxContainer[aria-disabled='false'] {
  cursor: pointer;
}

.cache-3lt5x-CheckboxContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-3lt5x-CheckboxContainer[aria-disabled='true'] .eu28k4m3 {
  fill: #c4c9d6;
}

.cache-3lt5x-CheckboxContainer[aria-disabled='true'] .eu28k4m3 .eu28k4m7 {
  stroke: #c4c9d6;
  fill: #f6f6f8;
}

.cache-3lt5x-CheckboxContainer .eu28k4m6,
.cache-3lt5x-CheckboxContainer .eu28k4m5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-3lt5x-CheckboxContainer .eu28k4m2:checked+.eu28k4m3 .eu28k4m6 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-3lt5x-CheckboxContainer .eu28k4m2[aria-checked="mixed"]+.eu28k4m3 .eu28k4m5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-3lt5x-CheckboxContainer:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-3lt5x-CheckboxContainer:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 .eu28k4m7 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-3lt5x-CheckboxContainer:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-3lt5x-CheckboxContainer:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 .eu28k4m7 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-mhe016-CheckboxInput {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-mhe016-CheckboxInput:not(:disabled) {
  cursor: pointer;
}

.cache-mhe016-CheckboxInput:disabled {
  cursor: not-allowed;
}

.cache-mhe016-CheckboxInput:checked+.eu28k4m3,
.cache-mhe016-CheckboxInput[aria-checked='mixed']+.eu28k4m3 {
  fill: #4f0599;
}

.cache-mhe016-CheckboxInput:checked+.eu28k4m3 .eu28k4m7,
.cache-mhe016-CheckboxInput[aria-checked='mixed']+.eu28k4m3 .eu28k4m7 {
  stroke: #4f0599;
}

.cache-mhe016-CheckboxInput[aria-invalid='true']+.eu28k4m3,
.cache-mhe016-CheckboxInput[aria-invalid='mixed']+.eu28k4m3 {
  fill: #dd3252;
}

.cache-mhe016-CheckboxInput[aria-invalid='true']+.eu28k4m3 .eu28k4m7,
.cache-mhe016-CheckboxInput[aria-invalid='mixed']+.eu28k4m3 .eu28k4m7 {
  stroke: #dd3252;
}

.cache-mhe016-CheckboxInput:focus+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-mhe016-CheckboxInput:focus+.eu28k4m3 .eu28k4m7 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-mhe016-CheckboxInput[aria-invalid='true']:focus+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-mhe016-CheckboxInput[aria-invalid='true']:focus+.eu28k4m3 .eu28k4m7 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-1lcemq7-StyledIcon {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-uzcbt1-InnerCheckbox {
  fill: #ffffff;
  stroke: #b2b6c3;
}

<label
    aria-disabled="false"
    class="cache-3lt5x-CheckboxContainer eu28k4m1"
    data-checked="false"
    data-error="false"
  >
    <input
      aria-invalid="false"
      class="cache-mhe016-CheckboxInput eu28k4m2"
      name=":rc:"
      type="checkbox"
      value="test"
    />
    <svg
      class="cache-1lcemq7-StyledIcon eu28k4m3"
      size="24"
      viewBox="0 0 24 24"
    >
      <g>
        <rect
          class="cache-uzcbt1-InnerCheckbox eu28k4m7"
          height="14"
          rx="1"
          stroke-width="2"
          width="14"
          x="5"
          y="5"
        />
        <rect
          class="cache-1nkq693-CheckMixedMark eu28k4m5"
          height="2"
          rx="1"
          width="8"
          x="8"
          y="11"
        />
        <rect
          class="cache-1nu9t2r-CheckMark eu28k4m6"
          height="8"
          rx="1"
          width="8"
          x="8"
          y="8"
        />
      </g>
    </svg>
    Checkbox Label
  </label>
</DocumentFragment>
`;

exports[`Checkbox renders correctly with an error 1`] = `
<DocumentFragment>
  .cache-3lt5x-CheckboxContainer {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.cache-3lt5x-CheckboxContainer[aria-disabled='false'] {
  cursor: pointer;
}

.cache-3lt5x-CheckboxContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-3lt5x-CheckboxContainer[aria-disabled='true'] .eu28k4m3 {
  fill: #c4c9d6;
}

.cache-3lt5x-CheckboxContainer[aria-disabled='true'] .eu28k4m3 .eu28k4m7 {
  stroke: #c4c9d6;
  fill: #f6f6f8;
}

.cache-3lt5x-CheckboxContainer .eu28k4m6,
.cache-3lt5x-CheckboxContainer .eu28k4m5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-3lt5x-CheckboxContainer .eu28k4m2:checked+.eu28k4m3 .eu28k4m6 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-3lt5x-CheckboxContainer .eu28k4m2[aria-checked="mixed"]+.eu28k4m3 .eu28k4m5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-3lt5x-CheckboxContainer:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-3lt5x-CheckboxContainer:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 .eu28k4m7 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-3lt5x-CheckboxContainer:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-3lt5x-CheckboxContainer:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 .eu28k4m7 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-mhe016-CheckboxInput {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-mhe016-CheckboxInput:not(:disabled) {
  cursor: pointer;
}

.cache-mhe016-CheckboxInput:disabled {
  cursor: not-allowed;
}

.cache-mhe016-CheckboxInput:checked+.eu28k4m3,
.cache-mhe016-CheckboxInput[aria-checked='mixed']+.eu28k4m3 {
  fill: #4f0599;
}

.cache-mhe016-CheckboxInput:checked+.eu28k4m3 .eu28k4m7,
.cache-mhe016-CheckboxInput[aria-checked='mixed']+.eu28k4m3 .eu28k4m7 {
  stroke: #4f0599;
}

.cache-mhe016-CheckboxInput[aria-invalid='true']+.eu28k4m3,
.cache-mhe016-CheckboxInput[aria-invalid='mixed']+.eu28k4m3 {
  fill: #dd3252;
}

.cache-mhe016-CheckboxInput[aria-invalid='true']+.eu28k4m3 .eu28k4m7,
.cache-mhe016-CheckboxInput[aria-invalid='mixed']+.eu28k4m3 .eu28k4m7 {
  stroke: #dd3252;
}

.cache-mhe016-CheckboxInput:focus+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-mhe016-CheckboxInput:focus+.eu28k4m3 .eu28k4m7 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-mhe016-CheckboxInput[aria-invalid='true']:focus+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-mhe016-CheckboxInput[aria-invalid='true']:focus+.eu28k4m3 .eu28k4m7 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-1lcemq7-StyledIcon {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-uzcbt1-InnerCheckbox {
  fill: #ffffff;
  stroke: #b2b6c3;
}

<label
    aria-disabled="false"
    class="cache-3lt5x-CheckboxContainer eu28k4m1"
    data-checked="false"
    data-error="true"
  >
    <input
      aria-describedby=":r8:-hint"
      aria-invalid="true"
      class="cache-mhe016-CheckboxInput eu28k4m2"
      name=":r8:"
      type="checkbox"
      value=""
    />
    <svg
      class="cache-1lcemq7-StyledIcon eu28k4m3"
      size="24"
      viewBox="0 0 24 24"
    >
      <g>
        <rect
          class="cache-uzcbt1-InnerCheckbox eu28k4m7"
          height="14"
          rx="1"
          stroke-width="2"
          width="14"
          x="5"
          y="5"
        />
        <rect
          class="cache-1nkq693-CheckMixedMark eu28k4m5"
          height="2"
          rx="1"
          width="8"
          x="8"
          y="11"
        />
        <rect
          class="cache-1nu9t2r-CheckMark eu28k4m6"
          height="8"
          rx="1"
          width="8"
          x="8"
          y="8"
        />
      </g>
    </svg>
    Checkbox Label
  </label>
  .cache-1l9l4mf-StyledText-PaddedText {
  color: #a6102d;
  font-size: 14px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0 4px;
}

<p
    class="eu28k4m4 cache-1l9l4mf-StyledText-PaddedText e1tg3t120"
  >
    test error
  </p>
</DocumentFragment>
`;

exports[`Checkbox renders correctly with indeterminate state 1`] = `
<DocumentFragment>
  .cache-3lt5x-CheckboxContainer {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.cache-3lt5x-CheckboxContainer[aria-disabled='false'] {
  cursor: pointer;
}

.cache-3lt5x-CheckboxContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-3lt5x-CheckboxContainer[aria-disabled='true'] .eu28k4m3 {
  fill: #c4c9d6;
}

.cache-3lt5x-CheckboxContainer[aria-disabled='true'] .eu28k4m3 .eu28k4m7 {
  stroke: #c4c9d6;
  fill: #f6f6f8;
}

.cache-3lt5x-CheckboxContainer .eu28k4m6,
.cache-3lt5x-CheckboxContainer .eu28k4m5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-3lt5x-CheckboxContainer .eu28k4m2:checked+.eu28k4m3 .eu28k4m6 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-3lt5x-CheckboxContainer .eu28k4m2[aria-checked="mixed"]+.eu28k4m3 .eu28k4m5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-3lt5x-CheckboxContainer:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-3lt5x-CheckboxContainer:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 .eu28k4m7 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-3lt5x-CheckboxContainer:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-3lt5x-CheckboxContainer:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 .eu28k4m7 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-mhe016-CheckboxInput {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-mhe016-CheckboxInput:not(:disabled) {
  cursor: pointer;
}

.cache-mhe016-CheckboxInput:disabled {
  cursor: not-allowed;
}

.cache-mhe016-CheckboxInput:checked+.eu28k4m3,
.cache-mhe016-CheckboxInput[aria-checked='mixed']+.eu28k4m3 {
  fill: #4f0599;
}

.cache-mhe016-CheckboxInput:checked+.eu28k4m3 .eu28k4m7,
.cache-mhe016-CheckboxInput[aria-checked='mixed']+.eu28k4m3 .eu28k4m7 {
  stroke: #4f0599;
}

.cache-mhe016-CheckboxInput[aria-invalid='true']+.eu28k4m3,
.cache-mhe016-CheckboxInput[aria-invalid='mixed']+.eu28k4m3 {
  fill: #dd3252;
}

.cache-mhe016-CheckboxInput[aria-invalid='true']+.eu28k4m3 .eu28k4m7,
.cache-mhe016-CheckboxInput[aria-invalid='mixed']+.eu28k4m3 .eu28k4m7 {
  stroke: #dd3252;
}

.cache-mhe016-CheckboxInput:focus+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-mhe016-CheckboxInput:focus+.eu28k4m3 .eu28k4m7 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-mhe016-CheckboxInput[aria-invalid='true']:focus+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-mhe016-CheckboxInput[aria-invalid='true']:focus+.eu28k4m3 .eu28k4m7 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-1lcemq7-StyledIcon {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-uzcbt1-InnerCheckbox {
  fill: #ffffff;
  stroke: #b2b6c3;
}

<label
    aria-disabled="false"
    class="cache-3lt5x-CheckboxContainer eu28k4m1"
    data-checked="indeterminate"
    data-error="false"
  >
    <input
      aria-checked="mixed"
      aria-invalid="false"
      class="cache-mhe016-CheckboxInput eu28k4m2"
      name=":rf:"
      type="checkbox"
      value=""
    />
    <svg
      class="cache-1lcemq7-StyledIcon eu28k4m3"
      size="24"
      viewBox="0 0 24 24"
    >
      <g>
        <rect
          class="cache-uzcbt1-InnerCheckbox eu28k4m7"
          height="14"
          rx="1"
          stroke-width="2"
          width="14"
          x="5"
          y="5"
        />
        <rect
          class="cache-1nkq693-CheckMixedMark eu28k4m5"
          height="2"
          rx="1"
          width="8"
          x="8"
          y="11"
        />
        <rect
          class="cache-1nu9t2r-CheckMark eu28k4m6"
          height="8"
          rx="1"
          width="8"
          x="8"
          y="8"
        />
      </g>
    </svg>
    Checkbox Label
  </label>
</DocumentFragment>
`;

exports[`Checkbox renders correctly with progress 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.cache-3lt5x-CheckboxContainer {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.cache-3lt5x-CheckboxContainer[aria-disabled='false'] {
  cursor: pointer;
}

.cache-3lt5x-CheckboxContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-3lt5x-CheckboxContainer[aria-disabled='true'] .eu28k4m3 {
  fill: #c4c9d6;
}

.cache-3lt5x-CheckboxContainer[aria-disabled='true'] .eu28k4m3 .eu28k4m7 {
  stroke: #c4c9d6;
  fill: #f6f6f8;
}

.cache-3lt5x-CheckboxContainer .eu28k4m6,
.cache-3lt5x-CheckboxContainer .eu28k4m5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-3lt5x-CheckboxContainer .eu28k4m2:checked+.eu28k4m3 .eu28k4m6 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-3lt5x-CheckboxContainer .eu28k4m2[aria-checked="mixed"]+.eu28k4m3 .eu28k4m5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-3lt5x-CheckboxContainer:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-3lt5x-CheckboxContainer:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 .eu28k4m7 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-3lt5x-CheckboxContainer:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-3lt5x-CheckboxContainer:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 .eu28k4m7 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-euwc5b-StyledActivityContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-gqzzce-Loader {
  -webkit-animation: animation-0 0.75s linear infinite;
  animation: animation-0 0.75s linear infinite;
}

.cache-11f05l0-Loader {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

.cache-mhe016-CheckboxInput {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-mhe016-CheckboxInput:not(:disabled) {
  cursor: pointer;
}

.cache-mhe016-CheckboxInput:disabled {
  cursor: not-allowed;
}

.cache-mhe016-CheckboxInput:checked+.eu28k4m3,
.cache-mhe016-CheckboxInput[aria-checked='mixed']+.eu28k4m3 {
  fill: #4f0599;
}

.cache-mhe016-CheckboxInput:checked+.eu28k4m3 .eu28k4m7,
.cache-mhe016-CheckboxInput[aria-checked='mixed']+.eu28k4m3 .eu28k4m7 {
  stroke: #4f0599;
}

.cache-mhe016-CheckboxInput[aria-invalid='true']+.eu28k4m3,
.cache-mhe016-CheckboxInput[aria-invalid='mixed']+.eu28k4m3 {
  fill: #dd3252;
}

.cache-mhe016-CheckboxInput[aria-invalid='true']+.eu28k4m3 .eu28k4m7,
.cache-mhe016-CheckboxInput[aria-invalid='mixed']+.eu28k4m3 .eu28k4m7 {
  stroke: #dd3252;
}

.cache-mhe016-CheckboxInput:focus+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-mhe016-CheckboxInput:focus+.eu28k4m3 .eu28k4m7 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-mhe016-CheckboxInput[aria-invalid='true']:focus+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-mhe016-CheckboxInput[aria-invalid='true']:focus+.eu28k4m3 .eu28k4m7 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

<label
    aria-disabled="false"
    class="cache-3lt5x-CheckboxContainer eu28k4m1"
    data-checked="false"
    data-error="false"
  >
    <div
      class="cache-euwc5b-StyledActivityContainer eu28k4m0"
    >
      <svg
        aria-label="Loading"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="20"
        aria-valuetext="20%"
        class="cache-gqzzce-Loader"
        role="progressbar"
        style="height: 24px; width: 24px;"
        viewBox="0 0 100 100"
      >
        <circle
          cx="50"
          cy="50"
          fill="none"
          r="42"
          stroke="#d4dae7"
          stroke-width="16"
        />
        <circle
          class="cache-11f05l0-Loader"
          cx="50"
          cy="50"
          fill="none"
          r="42"
          stroke="#4f0599"
          stroke-dasharray="263.89378290154264"
          stroke-dashoffset="211.11502632123413"
          stroke-linecap="round"
          stroke-width="16"
        />
      </svg>
    </div>
    <input
      aria-invalid="false"
      class="cache-mhe016-CheckboxInput eu28k4m2"
      name=":ra:"
      type="checkbox"
      value=""
    />
    Checkbox Label
  </label>
</DocumentFragment>
`;

exports[`Checkbox renders correctly with progress and no child 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.cache-3lt5x-CheckboxContainer {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.cache-3lt5x-CheckboxContainer[aria-disabled='false'] {
  cursor: pointer;
}

.cache-3lt5x-CheckboxContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-3lt5x-CheckboxContainer[aria-disabled='true'] .eu28k4m3 {
  fill: #c4c9d6;
}

.cache-3lt5x-CheckboxContainer[aria-disabled='true'] .eu28k4m3 .eu28k4m7 {
  stroke: #c4c9d6;
  fill: #f6f6f8;
}

.cache-3lt5x-CheckboxContainer .eu28k4m6,
.cache-3lt5x-CheckboxContainer .eu28k4m5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-3lt5x-CheckboxContainer .eu28k4m2:checked+.eu28k4m3 .eu28k4m6 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-3lt5x-CheckboxContainer .eu28k4m2[aria-checked="mixed"]+.eu28k4m3 .eu28k4m5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-3lt5x-CheckboxContainer:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-3lt5x-CheckboxContainer:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 .eu28k4m7 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-3lt5x-CheckboxContainer:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-3lt5x-CheckboxContainer:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 .eu28k4m7 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-euwc5b-StyledActivityContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-gqzzce-Loader {
  -webkit-animation: animation-0 0.75s linear infinite;
  animation: animation-0 0.75s linear infinite;
}

.cache-11f05l0-Loader {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

.cache-mhe016-CheckboxInput {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-mhe016-CheckboxInput:not(:disabled) {
  cursor: pointer;
}

.cache-mhe016-CheckboxInput:disabled {
  cursor: not-allowed;
}

.cache-mhe016-CheckboxInput:checked+.eu28k4m3,
.cache-mhe016-CheckboxInput[aria-checked='mixed']+.eu28k4m3 {
  fill: #4f0599;
}

.cache-mhe016-CheckboxInput:checked+.eu28k4m3 .eu28k4m7,
.cache-mhe016-CheckboxInput[aria-checked='mixed']+.eu28k4m3 .eu28k4m7 {
  stroke: #4f0599;
}

.cache-mhe016-CheckboxInput[aria-invalid='true']+.eu28k4m3,
.cache-mhe016-CheckboxInput[aria-invalid='mixed']+.eu28k4m3 {
  fill: #dd3252;
}

.cache-mhe016-CheckboxInput[aria-invalid='true']+.eu28k4m3 .eu28k4m7,
.cache-mhe016-CheckboxInput[aria-invalid='mixed']+.eu28k4m3 .eu28k4m7 {
  stroke: #dd3252;
}

.cache-mhe016-CheckboxInput:focus+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-mhe016-CheckboxInput:focus+.eu28k4m3 .eu28k4m7 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-mhe016-CheckboxInput[aria-invalid='true']:focus+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-mhe016-CheckboxInput[aria-invalid='true']:focus+.eu28k4m3 .eu28k4m7 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

<label
    aria-disabled="false"
    class="cache-3lt5x-CheckboxContainer eu28k4m1"
    data-checked="false"
    data-error="false"
  >
    <div
      class="cache-euwc5b-StyledActivityContainer eu28k4m0"
    >
      <svg
        aria-label="Loading"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="20"
        aria-valuetext="20%"
        class="cache-gqzzce-Loader"
        role="progressbar"
        style="height: 24px; width: 24px;"
        viewBox="0 0 100 100"
      >
        <circle
          cx="50"
          cy="50"
          fill="none"
          r="42"
          stroke="#d4dae7"
          stroke-width="16"
        />
        <circle
          class="cache-11f05l0-Loader"
          cx="50"
          cy="50"
          fill="none"
          r="42"
          stroke="#4f0599"
          stroke-dasharray="263.89378290154264"
          stroke-dashoffset="211.11502632123413"
          stroke-linecap="round"
          stroke-width="16"
        />
      </svg>
    </div>
    <input
      aria-invalid="false"
      class="cache-mhe016-CheckboxInput eu28k4m2"
      name=":rb:"
      type="checkbox"
      value=""
    />
  </label>
</DocumentFragment>
`;

exports[`Checkbox renders correctly with sizes 1`] = `
<DocumentFragment>
  .cache-3lt5x-CheckboxContainer {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.cache-3lt5x-CheckboxContainer[aria-disabled='false'] {
  cursor: pointer;
}

.cache-3lt5x-CheckboxContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-3lt5x-CheckboxContainer[aria-disabled='true'] .eu28k4m3 {
  fill: #c4c9d6;
}

.cache-3lt5x-CheckboxContainer[aria-disabled='true'] .eu28k4m3 .eu28k4m7 {
  stroke: #c4c9d6;
  fill: #f6f6f8;
}

.cache-3lt5x-CheckboxContainer .eu28k4m6,
.cache-3lt5x-CheckboxContainer .eu28k4m5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-3lt5x-CheckboxContainer .eu28k4m2:checked+.eu28k4m3 .eu28k4m6 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-3lt5x-CheckboxContainer .eu28k4m2[aria-checked="mixed"]+.eu28k4m3 .eu28k4m5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-3lt5x-CheckboxContainer:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-3lt5x-CheckboxContainer:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 .eu28k4m7 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-3lt5x-CheckboxContainer:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-3lt5x-CheckboxContainer:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 .eu28k4m7 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-1yezwok-CheckboxInput {
  position: absolute;
  white-space: nowrap;
  height: 37px;
  width: 37px;
  opacity: 0;
  border-width: 0;
}

.cache-1yezwok-CheckboxInput:not(:disabled) {
  cursor: pointer;
}

.cache-1yezwok-CheckboxInput:disabled {
  cursor: not-allowed;
}

.cache-1yezwok-CheckboxInput:checked+.eu28k4m3,
.cache-1yezwok-CheckboxInput[aria-checked='mixed']+.eu28k4m3 {
  fill: #4f0599;
}

.cache-1yezwok-CheckboxInput:checked+.eu28k4m3 .eu28k4m7,
.cache-1yezwok-CheckboxInput[aria-checked='mixed']+.eu28k4m3 .eu28k4m7 {
  stroke: #4f0599;
}

.cache-1yezwok-CheckboxInput[aria-invalid='true']+.eu28k4m3,
.cache-1yezwok-CheckboxInput[aria-invalid='mixed']+.eu28k4m3 {
  fill: #dd3252;
}

.cache-1yezwok-CheckboxInput[aria-invalid='true']+.eu28k4m3 .eu28k4m7,
.cache-1yezwok-CheckboxInput[aria-invalid='mixed']+.eu28k4m3 .eu28k4m7 {
  stroke: #dd3252;
}

.cache-1yezwok-CheckboxInput:focus+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-1yezwok-CheckboxInput:focus+.eu28k4m3 .eu28k4m7 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-1yezwok-CheckboxInput[aria-invalid='true']:focus+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-1yezwok-CheckboxInput[aria-invalid='true']:focus+.eu28k4m3 .eu28k4m7 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-mu6xj5-StyledIcon {
  border-radius: 4px;
  height: 37px;
  width: 37px;
  min-width: 37px;
  min-height: 37px;
}

.cache-uzcbt1-InnerCheckbox {
  fill: #ffffff;
  stroke: #b2b6c3;
}

<label
    aria-disabled="false"
    class="cache-3lt5x-CheckboxContainer eu28k4m1"
    data-checked="false"
    data-error="false"
  >
    <input
      aria-invalid="false"
      class="cache-1yezwok-CheckboxInput eu28k4m2"
      name=":rd:"
      type="checkbox"
      value="test"
    />
    <svg
      class="cache-mu6xj5-StyledIcon eu28k4m3"
      size="37"
      viewBox="0 0 24 24"
    >
      <g>
        <rect
          class="cache-uzcbt1-InnerCheckbox eu28k4m7"
          height="14"
          rx="1"
          stroke-width="2"
          width="14"
          x="5"
          y="5"
        />
        <rect
          class="cache-1nkq693-CheckMixedMark eu28k4m5"
          height="2"
          rx="1"
          width="8"
          x="8"
          y="11"
        />
        <rect
          class="cache-1nu9t2r-CheckMark eu28k4m6"
          height="8"
          rx="1"
          width="8"
          x="8"
          y="8"
        />
      </g>
    </svg>
    Checkbox Label
  </label>
  @keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.cache-3lt5x-CheckboxContainer {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.cache-3lt5x-CheckboxContainer[aria-disabled='false'] {
  cursor: pointer;
}

.cache-3lt5x-CheckboxContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-3lt5x-CheckboxContainer[aria-disabled='true'] .eu28k4m3 {
  fill: #c4c9d6;
}

.cache-3lt5x-CheckboxContainer[aria-disabled='true'] .eu28k4m3 .eu28k4m7 {
  stroke: #c4c9d6;
  fill: #f6f6f8;
}

.cache-3lt5x-CheckboxContainer .eu28k4m6,
.cache-3lt5x-CheckboxContainer .eu28k4m5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-3lt5x-CheckboxContainer .eu28k4m2:checked+.eu28k4m3 .eu28k4m6 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-3lt5x-CheckboxContainer .eu28k4m2[aria-checked="mixed"]+.eu28k4m3 .eu28k4m5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-3lt5x-CheckboxContainer:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-3lt5x-CheckboxContainer:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 .eu28k4m7 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-3lt5x-CheckboxContainer:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-3lt5x-CheckboxContainer:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 .eu28k4m7 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-euwc5b-StyledActivityContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-gqzzce-Loader {
  -webkit-animation: animation-0 0.75s linear infinite;
  animation: animation-0 0.75s linear infinite;
}

.cache-11f05l0-Loader {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

.cache-1yezwok-CheckboxInput {
  position: absolute;
  white-space: nowrap;
  height: 37px;
  width: 37px;
  opacity: 0;
  border-width: 0;
}

.cache-1yezwok-CheckboxInput:not(:disabled) {
  cursor: pointer;
}

.cache-1yezwok-CheckboxInput:disabled {
  cursor: not-allowed;
}

.cache-1yezwok-CheckboxInput:checked+.eu28k4m3,
.cache-1yezwok-CheckboxInput[aria-checked='mixed']+.eu28k4m3 {
  fill: #4f0599;
}

.cache-1yezwok-CheckboxInput:checked+.eu28k4m3 .eu28k4m7,
.cache-1yezwok-CheckboxInput[aria-checked='mixed']+.eu28k4m3 .eu28k4m7 {
  stroke: #4f0599;
}

.cache-1yezwok-CheckboxInput[aria-invalid='true']+.eu28k4m3,
.cache-1yezwok-CheckboxInput[aria-invalid='mixed']+.eu28k4m3 {
  fill: #dd3252;
}

.cache-1yezwok-CheckboxInput[aria-invalid='true']+.eu28k4m3 .eu28k4m7,
.cache-1yezwok-CheckboxInput[aria-invalid='mixed']+.eu28k4m3 .eu28k4m7 {
  stroke: #dd3252;
}

.cache-1yezwok-CheckboxInput:focus+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-1yezwok-CheckboxInput:focus+.eu28k4m3 .eu28k4m7 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-1yezwok-CheckboxInput[aria-invalid='true']:focus+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-1yezwok-CheckboxInput[aria-invalid='true']:focus+.eu28k4m3 .eu28k4m7 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

<label
    aria-disabled="false"
    class="cache-3lt5x-CheckboxContainer eu28k4m1"
    data-checked="false"
    data-error="false"
  >
    <div
      class="cache-euwc5b-StyledActivityContainer eu28k4m0"
    >
      <svg
        aria-label="Loading"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="20"
        aria-valuetext="20%"
        class="cache-gqzzce-Loader"
        role="progressbar"
        style="height: 37px; width: 37px;"
        viewBox="0 0 100 100"
      >
        <circle
          cx="50"
          cy="50"
          fill="none"
          r="42"
          stroke="#d4dae7"
          stroke-width="16"
        />
        <circle
          class="cache-11f05l0-Loader"
          cx="50"
          cy="50"
          fill="none"
          r="42"
          stroke="#4f0599"
          stroke-dasharray="263.89378290154264"
          stroke-dashoffset="211.11502632123413"
          stroke-linecap="round"
          stroke-width="16"
        />
      </svg>
    </div>
    <input
      aria-invalid="false"
      class="cache-1yezwok-CheckboxInput eu28k4m2"
      name=":re:"
      type="checkbox"
      value="test"
    />
    Checkbox Label
  </label>
</DocumentFragment>
`;
